--- a/app/views/events/edit.html.haml
+++ b/app/views/events/edit.html.haml
@@ -1,5 +1,4 @@
-%h1 Edit Event
-
-= render 'form'
-
-= link_to "Cancel", event_path
+.col-md-6.col-md-offset-3
+	%h1 Edit Event
+	= render 'form'
+	= link_to "Cancel", event_path
