--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -1,6 +1,9 @@
 %h1= @event.name
 %p= @event.description
+Created by
+= @event.user.email
 
+%br/
 = link_to "Back", root_path
 = link_to "Edit", edit_event_path
 = link_to "Delete", event_path, method: :delete, data: { confirm: "Are you sure?"}
