--- a/app/views/events/edit.html.haml
+++ b/app/views/events/edit.html.haml
@@ -1,4 +1,5 @@
 .col-md-6.col-md-offset-3
 	%h1 Edit Event
+	= image_tag @event.image.url(:medium)
 	= render 'form'
 	= link_to "Cancel", event_path
