--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -1,2 +1,9 @@
-- @events.each do |event|
-	%h2= link_to event.name, event
+#events.transitions-enabled
+	- @events.each do |event|
+		.box.panel.panel-default
+			= link_to (image_tag event.image.url), event
+			.panel-body
+				%h2= link_to event.name, event
+				%p.user
+				Created by
+				= event.user.email
