--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -1,9 +1,23 @@
-%h1= @event.name
-%p= @event.description
-Created by
-= @event.user.email
-
-%br/
-= link_to "Back", root_path
-= link_to "Edit", edit_event_path
-= link_to "Delete", event_path, method: :delete, data: { confirm: "Are you sure?"}
+#events_show.row
+	.col-md-8.col-md-offset-2
+		.panel.panel-default
+			.panel-heading.event_image
+				%h1= @event.name
+			.panel-body
+				= image_tag @event.image.url(:medium)
+				%p.description= @event.description
+				%p= @event.datetime
+				%p= @event.location
+				Created by
+				= @event.user.email
+				.panel-footer
+					.row
+						.col-md-6
+							%p.user
+							Created by
+							= @event.user.email
+						.col-md-6
+							.btn-group.pull-right
+								= link_to "Back", root_path, class: "btn btn-default"
+								= link_to "Edit", edit_event_path, class: "btn btn-default"
+								= link_to "Delete", event_path, method: :delete, data: { confirm: "Are you sure?"}, class: "btn btn-default"
