Insert into EventUser table and FIXED paperclip uploads

--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -5,5 +5,4 @@
 			.panel-body
 				%h2= link_to event.name, event
 				%p.user
-				Created by
-				= event.user.email
+				Created by = event.user.email
