--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -19,5 +19,6 @@
 						.col-md-6
 							.btn-group.pull-right
 								= link_to "Back", root_path, class: "btn btn-default"
+								= link_to "Invite", invite_event_path, class: "btn btn-default"
 								= link_to "Edit", edit_event_path, class: "btn btn-default"
 								= link_to "Delete", event_path, method: :delete, data: { confirm: "Are you sure?"}, class: "btn btn-default"
