--- a/app/views/events/edit.html.haml
+++ b/app/views/events/edit.html.haml
@@ -1,5 +1,13 @@
 .col-md-6.col-md-offset-3
-	%h1 Edit Event
-	= image_tag @event.image.url(:medium)
-	= render 'form'
-	= link_to "Cancel", event_path
+	.row
+		.panel.panel-default
+			.panel-heading
+				%h1 Edit Event
+			.panel-body
+				%strong.center Current Image
+				%br
+				= image_tag @event.image.url(:medium)
+				%br
+				= render 'form'
+				%br
+				= link_to "Cancel", event_path
