Correction for invite form and rerouted path url

--- a/app/views/events_users/invite.html.erb
+++ b/app/views/events_users/invite.html.erb
@@ -1,4 +1,4 @@
-<%= form_for (@event), :url => {:action => "invite", :id => @event.id } do |f| %>
+<%= form_for (@event), :url => invite_events_users_path(@event), :method => :GET do |f| %>
 
 	<div class = "field" >
 		<%= f.label "Users" %><br />
