Added name column to user, fixed interface details

--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -4,5 +4,6 @@
 			= link_to (image_tag event.image.url), event
 			.panel-body
 				%h2= link_to event.name, event
-				%p.user
-				Created by = event.user.email
+				Created by:
+				= event.user.first_name 
+				= event.user.last_name
