--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,6 +14,7 @@
  *= require_tree .
  *= require_self
  */
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
@@ -38,7 +39,7 @@ nav {
 	}
 }
 
-#pins {
+#events {
   margin: 0 auto;
   width: 100%;
   .box {
@@ -77,14 +78,14 @@ nav {
 	}
 }
 
-#pin_show {
+#event_show {
 	.panel-heading {
 		padding: 0;
 	}
-	.pin_image {
+	.event_image {
 		img {
 			max-width: 100%;
-			width: 100%;
+			height: auto;
 			display: block;
 			margin: 0 auto;
 		}
