--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -4,6 +4,7 @@
 			= link_to (image_tag event.image.url), event
 			.panel-body
 				%h2= link_to event.name, event
+				%h2= event.datetime
 				Created by:
 				= event.user.first_name 
 				= event.user.last_name
