--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -22,6 +22,10 @@
           </div>
 
           <div class="form-group">
+            <%= f.input :all_tags, required: true, autofocus: true, input_html: {class: 'form-control' } %>
+          </div>
+
+          <div class="form-group">
             <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
               <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
             <% end %>
