--- a/app/views/users/search.html.haml
+++ b/app/views/users/search.html.haml
@@ -8,7 +8,8 @@
 				= link_to (image_tag s.image.url), s
 				.panel-body
 					%h2= link_to s.name, s
-					%h2= s.datetime
+					%p= s.datetime.to_date
+					%p= s.datetime.strftime("%I:%M%p")
 					Created by:
 					= s.user.first_name 
 					= s.user.last_name
@@ -23,7 +24,8 @@
 					= link_to (image_tag s.image.url), s
 					.panel-body
 						%h2= link_to s.name, s
-						%h2= s.datetime
+						%p= s.datetime.to_date
+						%p= s.datetime.strftime("%I:%M%p")
 						Created by:
 						= s.user.first_name 
 						= s.user.last_name
