Fixed search view style

--- a/app/views/users/search.html.haml
+++ b/app/views/users/search.html.haml
@@ -19,7 +19,7 @@
 %br
 %h2= "Suggestions"
 
-#events.transitions-enabled
+#recommendations.transitions-enabled
 	-if @recommendation.size != 0
 		-@recommendation.each do |s|
 			.box.panel.panel-default
