--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -9,19 +9,19 @@
 					%li= msg
 
 	.form-group 
-		= f.input :image, input_html: { class: 'form-control'}
+		= f.input :image, input_html: { class: 'form-control'} 
 
 	.form-group 
-		= f.input :name, input_html: { class: 'form-control'}
+		= f.input :name, input_html: { class: 'form-control'}, required: 'true'
 
 	.form-group 
-		= f.input :datetime, input_html: { class: 'form-control'}
+		= f.input :datetime, input_html: { class: 'form-control'},required: 'true'
 
 	.form-group 
-		= f.input :location, input_html: { class: 'form-control'}
+		= f.input :location, input_html: { class: 'form-control'}, required: 'true'
 
 	.form-group
-		= f.input :all_tags, placeholder: "Separate the tags by commas", input_html: { class: 'form-control'}
+		= f.input :all_tags, placeholder: "Separate the tags by commas", input_html: { class: 'form-control'}, required: 'true'
 
 	.form-group
 		= f.input :description, input_html: { class: 'form-control'}
