--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,21 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+table, th, td {
+   border: 1px solid black;
+}
+
+th {
+    width: 200px;
+    background-color: #4682B4;
+    color: black;
+}
+
+tr:nth-child(even) {
+    background-color: #F0F8FF;
+}
+
+tr:nth-child(odd) {
+    background-color: #b0c4de;
+}
