--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -49,6 +49,7 @@
         <% end %>
       </div>
           <div class="panel-footer">
+          <h3><%= link_to "View account statistics", stats_users_path %></h3>
           <h3>Cancel my account</h3>
 
           <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
