--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 table, th, td {
-   border: 1px solid black;
+   border: 1px solid white;
 }
 
 th {
