--- a/app/views/users/stats.html.erb
+++ b/app/views/users/stats.html.erb
@@ -9,11 +9,13 @@
 	</tr>
 	<% @events.each do |e| %>
 	<tr>
-		<td width="200px" align = "center"><%= e.name %></td>
-		<td width="200px" align = "center"><%= e.datetime %></td>
-		<% @sumInvites = EventsUser.where("event_id = ? AND owner != ?", e.id, current_user.id).count %>
-		<td width="200px" align = "center"><%= "#{@sumInvites}" %></td>
-		<% @sumGoing =  EventsUser.where("event_id = ? AND owner != ? AND status = ?", e.id, current_user.id, 'going').count %>
-		<td width="200px" align = "center"><%= "#{@sumGoing}" %></td>
+		<% if !e.nil? %>
+			<td width="200px" align = "center"><%= e.name %></td>
+			<td width="200px" align = "center"><%= e.datetime %></td>
+			<% @sumInvites = EventsUser.where("event_id = ? AND owner != ?", e.id, current_user.id).count %>
+			<td width="200px" align = "center"><%= "#{@sumInvites}" %></td>
+			<% @sumGoing =  EventsUser.where("event_id = ? AND owner != ? AND status = ?", e.id, current_user.id, 'going').count %>
+			<td width="200px" align = "center"><%= "#{@sumGoing}" %></td>
+		<% end %>
 	</tr>
 	<% end %>
