--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -32,7 +32,7 @@
 										= link_to "Delete", event_path, method: :delete, data: { confirm: "Are you sure?"}, class: "btn btn-default"
 									- else
 										- if @going
-											= link_to "Not going", event_path(@event, :assisting => '0'), class: "btn btn-default" #agregar el usuario al evento
+											= link_to "Not Going", event_path(@event, :assisting => '0'), class: "btn btn-default" #agregar el usuario al evento
 										- else
 											= link_to "Assist", event_path(@event, :assisting => '1'), class: "btn btn-default" #agregar el usuario al evento
 	- if user_signed_in?
@@ -46,5 +46,4 @@
 					-@invites.each do |i|
 						.slide 
 						= i.first_name
-						= i.last_name 
-				
+						= i.last_name
