--- a/app/views/users/stats.html.erb
+++ b/app/views/users/stats.html.erb
@@ -10,12 +10,18 @@
 	<% @events.each do |e| %>
 	<tr>
 		<% if !e.nil? %>
-			<td width="200px" align = "center"><%= e.name %></td>
-			<td width="200px" align = "center"><%= e.datetime %></td>
-			<% @sumInvites = EventsUser.where("event_id = ? AND owner != ?", e.id, current_user.id).count %>
-			<td width="200px" align = "center"><%= "#{@sumInvites}" %></td>
-			<% @sumGoing =  EventsUser.where("event_id = ? AND owner != ? AND status = ?", e.id, current_user.id, 'going').count %>
-			<td width="200px" align = "center"><%= "#{@sumGoing}" %></td>
+			<% @e = Event.find(e.event_id) %>
+			<%if !@e.nil? %>
+				<td width="200px" align = "center"><%= @e.name %></td>
+				<td width="200px" align = "center"><%= @e.datetime %></td>
+				<% @sumInvites = EventsUser.where("event_id = ?", e.event_id).count%>
+				<% if @sumInvites != 0 %>
+					<% @sumInvites = @sumInvites-1 %>
+				<% end %>
+				<td width="200px" align = "center"><%= "#{@sumInvites}" %></td>
+				<% @sumGoing =  EventsUser.where("event_id = ? AND status = ?", e.event_id, 'going').count%>
+				<td width="200px" align = "center"><%= "#{@sumGoing}" %></td>
+			<% end %>
 		<% end %>
 	</tr>
 	<% end %>
