--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -20,6 +20,9 @@
 				    		<%= f.input :email, required: true, autofocus: true, input_html: {class: 'form-control' } %>
 				    	</div>
 				    	<div class="form-group">
+            				<%= f.input :all_tags, required: true, autofocus: true, input_html: {class: 'form-control' } %>
+          				</div>
+				    	<div class="form-group">
 				    		<%= f.input :password, required: true, input_html: {class: 'form-control' } %>
 				    	</div>
 				    	<div class="form-group">
