--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,7 +22,7 @@
 						%li= link_to "Invites", invites_users_path
 					- else
 						%li= link_to "Invites (#{@count})" , invites_users_path
-					%li= link_to "Account", edit_user_registration_path
+					%li= link_to "#{current_user.first_name} #{current_user.last_name}", edit_user_registration_path
 					%li= link_to "Sign Out", destroy_user_session_path, method: :delete
 			- else
 				%ul.nav.navbar-nav.navbar-right
