--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -20,6 +20,9 @@
 	.form-group 
 		= f.input :location, input_html: { class: 'form-control'}, required: 'true'
 
+	.form-group 
+		= f.input :category, input_html: { class: 'form-control'}, required: 'true'
+
 	.form-group
 		= f.input :all_tags, placeholder: "Separate the tags by commas", input_html: { class: 'form-control'}, required: 'true'
 
