--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -2,6 +2,9 @@
 	= text_field_tag(:search)
 	= submit_tag("Search")
 
+= form_tag("/advancedsearch", method: "get") do
+	= submit_tag("Advanced Search")
+
 %h2= "Suggestions Based On Your Interests"
 #recommendations.transitions-enabled
 	-if @personalRec.size != 0
